# wolfssl-tls13-classical

./: .gitignore  CMakeLists.txt  README.md  client.c  common.h  server.c
build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client  cmake_install.cmake  server
certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  server-cert.pem  server-key.pem  server.csr  server_ext.cnf
tls13-classical/: server.c  tls13-classical.sln  tls13-classical.vcxproj  tls13-classical.vcxproj.filters
tls13-classical-client/: common.h  tls13-classical-client.vcxproj  tls13-classical-client.vcxproj.filters
tls13-classical-server/: tls13-classical.sln  tls13-classical.vcxproj
